# goemon-dynamites-translation

./: .gitignore  README.md  pyproject.toml
src/: main.py  text.py  tiles.py
