[tool.poetry]
name = "goemon-dynamites-translation"
version = "0.1.0"
description = "Scripts for translation of the Goemon Dynamites GBC game."
authors = ["rsgrava <rsgrava@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
extract_font = "src.main:extract_font"
inject_font = "src.main:inject_font"
inject_text_test = "src.main:inject_text_test"
explode_banks = "src.main:explode_banks"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
